# bluetape-rs-workshop

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.ko.md  README.md  WIP.md
.github/workflows/: ci.yml
docs/images/readme-diagrams/: example-batched-order-windowing.dot  example-batched-order-windowing.plain  example-catalog-enrichment-fanout.dot  example-catalog-enrichment-fanout.plain  example-foundation-order-cleanup.dot  example-foundation-order-cleanup.plain  example-request-tracing-log-capture.dot  example-request-tracing-log-capture.plain  example-shutdown-aware-worker.dot  example-shutdown-aware-worker.plain  example-temp-resource-test-harness.dot  example-temp-resource-test-harness.plain  geometry-summary.txt  workshop-collections-async-architecture.dot  workshop-collections-async-architecture.plain  workshop-collections-async-sequence.dot  workshop-collections-async-sequence.plain  workshop-foundation-architecture.dot  workshop-foundation-architecture.plain  workshop-foundation-sequence.dot  workshop-foundation-sequence.plain
docs/lessons/: 2026-06-11-milestone-0-1-0-review.md  2026-06-13-milestone-0-2-0-examples.md
docs/review/: 2026-06-13-issue-10-invitation-codecs-review.md  2026-06-13-milestone-0-2-0-code-review.md  2026-06-13-milestone-0-2-0-plan-review.md  2026-06-13-milestone-0-2-0-spec-review.md  2026-06-13-readme-diagram-review.md
docs/superpowers/plans/: 2026-06-13-milestone-0-2-0-examples-plan.md
docs/superpowers/specs/: 2026-06-13-milestone-0-2-0-examples-design.md
examples/batched-order-windowing/: Cargo.toml  README.ko.md  README.md
examples/batched-order-windowing/src/: domain.rs  error.rs  lib.rs  tests.rs  windowing.rs
examples/catalog-enrichment-fanout/: Cargo.toml  README.ko.md  README.md
examples/catalog-enrichment-fanout/src/: domain.rs  enrichment.rs  error.rs  lib.rs  tests.rs
examples/foundation-order-cleanup/: Cargo.toml  README.ko.md  README.md
examples/invitation-codecs/: Cargo.toml  README.ko.md  README.md
examples/invitation-codecs/src/: lib.rs  (+4 more)
examples/request-tracing-log-capture/: Cargo.toml  README.ko.md  README.md
examples/request-tracing-log-capture/src/: lib.rs
examples/shutdown-aware-worker/: Cargo.toml  README.ko.md  README.md
examples/shutdown-aware-worker/src/: domain.rs  error.rs  lib.rs  tests.rs  worker.rs
examples/temp-resource-test-harness/: Cargo.toml  README.ko.md  README.md
examples/temp-resource-test-harness/src/: lib.rs
scripts/: generate-foundation-diagrams.py
(+1 files in other folders)
