[package]
name = "batched-order-windowing"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bluetape-rs-collections.workspace = true
bluetape-rs-core.workspace = true
bluetape-rs-logging.workspace = true
thiserror.workspace = true
tracing.workspace = true
