[package]
name = "temp-resource-test-harness"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
bluetape-rs-core.workspace = true
bluetape-rs-test.workspace = true
thiserror.workspace = true

